2012-09-14 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: stringSearch function involving multiple
	strings use strcmp/stricmp incorrectly, which caused the problem
	reported by Michael Wang
	* tests/Makefile.am: modify the test case 1 of check-text to use a
	list of 10 strings on column b (a text column) to repeat the test
	case used by Michael Wang

2012-09-13 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: change setDictionary and prepareMembers to
	make sure idx is no nil
	* src/part.cpp:1606 comment out the block - by merging the
	dictionaries for categorical values, getNumKeys can return values
	larger than 1

2012-09-11 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: change back the tests for leading and trailing
	spaces to use the function isspace instead of isgraph based on the
	suggestion from Gaurav Agarwal
	* src/colValue.cpp: in function ibis::colValues::create generate
	ibis::colStrings for columns of type CATEGORY (instead of generate
	ibis::colUInts)
	* src/bundles.cpp:1474 get the actual null mask instead of using
	all 1s
	* src/bord.cpp:5998 missing 'else' at the beginning of the line
	(which causes extra values to be inserted to the result table)

2012-09-10 John Wu <John dot Wu at ACM dot org>
	* src/array_t.cpp: consolidate deletion of actual into the
	function freeMemory

2012-09-07 John Wu <John dot Wu at ACM dot org>
	* doc/dataLoading.html, examples/ardea.cpp: update documentation
	about the options of inputing meta tags and long list of column
	names and types (in response to questions from Andrew Olson)
	* examples/ibis.cpp: add call to bitvectorToCoordinates to help
	debug a problem with FastQuery

2012-09-05 John Wu <John dot Wu at ACM dot org>
	* src/array_t.h, src/array_t.cpp: change the test on actual
	because it might be nil when the caller specifies an extenal piece
	of storage
	* src/idirekte.cpp: constructor0 neglected to take into account of